Fixes disappearing cards on Safari (mobile view) in index and detail view

--- a/css/main.scss
+++ b/css/main.scss
@@ -146,7 +146,7 @@ nav.nav { // traditional nav bar
 .card {
   border-radius: 3px;
   background-color: $main-color-default;
-  overflow: hidden;
+  // overflow: hidden;
   margin: 10px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, .5);
   flex-basis: 50%;
